[gd_scene load_steps=16 format=3 uid="uid://cwj82duxudtse"]

[ext_resource type="PackedScene" uid="uid://13xrbcp83u58" path="res://scenes/building.tscn" id="1_qkjko"]
[ext_resource type="Script" uid="uid://bwb7x5ietwgtd" path="res://scripts/hub.gd" id="1_tlc0s"]
[ext_resource type="PackedScene" uid="uid://b1xb7mbig4isg" path="res://scenes/level_select.tscn" id="3_7xwqd"]
[ext_resource type="PackedScene" uid="uid://b1ajpn8hqx5vh" path="res://scenes/transition_screen.tscn" id="4_ahie3"]
[ext_resource type="PackedScene" uid="uid://h3k27ga3iolj" path="res://scenes/world_select.tscn" id="6_2rv1e"]
[ext_resource type="PackedScene" uid="uid://bhhyrcyu5vw0e" path="res://scenes/prefabs/player.tscn" id="7_m10od"]
[ext_resource type="PackedScene" uid="uid://c8lj4bah1i8a0" path="res://scenes/cyber_security.tscn" id="7_uq2mt"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_k8blq"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_q0elt"]
sky_material = SubResource("ProceduralSkyMaterial_k8blq")

[sub_resource type="Environment" id="Environment_77kxt"]
background_mode = 2
sky = SubResource("Sky_q0elt")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="CylinderShape3D" id="CylinderShape3D_npv4g"]

[sub_resource type="BoxShape3D" id="BoxShape3D_l2gmx"]

[sub_resource type="BoxMesh" id="BoxMesh_r5oxx"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_s5o4l"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_dejmd"]
size = Vector3(2, 2, 3.332)

[node name="Hub" type="Node3D"]
script = ExtResource("1_tlc0s")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_77kxt")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource("7_m10od")]

[node name="building" parent="." instance=ExtResource("1_qkjko")]

[node name="LevelSelectionArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -16.7546, 1.1039, -0.0059804)
collision_mask = 7

[node name="CollisionShape3D" type="CollisionShape3D" parent="LevelSelectionArea"]
transform = Transform3D(2.33113, 0, 0, 0, 1.3845, 0, 0, 0, 2.33113, -0.344379, 0, 0)
shape = SubResource("CylinderShape3D_npv4g")

[node name="Tooltip" type="Label3D" parent="LevelSelectionArea"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -2.6686, 0.384184, 0)
text = "[E] to Select Level
"

[node name="Level1Block" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.56232, 0.787391, -1.04508)
visible = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Level1Block"]
shape = SubResource("BoxShape3D_l2gmx")

[node name="CSGMesh3D" type="CSGMesh3D" parent="Level1Block"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.625143, 0.152002, 0.574427)
mesh = SubResource("BoxMesh_r5oxx")
material = SubResource("StandardMaterial3D_s5o4l")

[node name="WorldCompletionsArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.14511, 0.903405, 0)
collision_mask = 7

[node name="CollisionShape3D" type="CollisionShape3D" parent="WorldCompletionsArea"]
shape = SubResource("BoxShape3D_dejmd")

[node name="Label3D" type="Label3D" parent="WorldCompletionsArea"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0.877578, 0)
text = "[E] World Completions"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="WorldSelect" parent="CanvasLayer" node_paths=PackedStringArray("world_completions_area", "tooltip") instance=ExtResource("6_2rv1e")]
visible = false
world_completions_area = NodePath("../../WorldCompletionsArea")
tooltip = NodePath("../../WorldCompletionsArea/Label3D")

[node name="CyberSecurity" parent="CanvasLayer" instance=ExtResource("7_uq2mt")]
visible = false

[node name="LevelSelect" parent="CanvasLayer" instance=ExtResource("3_7xwqd")]
visible = false

[node name="TransitionScreen" parent="CanvasLayer" instance=ExtResource("4_ahie3")]
visible = false
mouse_filter = 1

[connection signal="body_entered" from="LevelSelectionArea" to="CanvasLayer/LevelSelect" method="_on_level_selection_area_body_entered"]
[connection signal="body_entered" from="WorldCompletionsArea" to="." method="_on_world_completions_area_body_entered"]
[connection signal="body_exited" from="WorldCompletionsArea" to="." method="_on_world_completions_area_body_exited"]
